--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/mapped-types": "^2.0.5",
     "@nestjs/platform-express": "^10.3.3",
     "@nestjs/swagger": "^7.3.0",
+    "@prisma/client": "^5.11.0",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
@@ -57,6 +58,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "jest": "^27.2.5",
     "prettier": "^3.2.5",
+    "prisma": "^5.11.0",
     "source-map-support": "^0.5.20",
     "supertest": "^6.2.3",
     "ts-jest": "^27.0.3",
