chore: update env.example

--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,7 @@ TOKEN_REFRESH_EXPIRE_TIME=24h
 # postgres
 DB_HOST_PORT=5435
 DB_CONTAINER_PORT=5432
-DB_HOST=default_db_host
+DB_HOST=127.0.0.1
 POSTGRES_USER=default_user
 POSTGRES_PASSWORD=default_password
 POSTGRES_DB=default_db
